--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "nyc tape test/**/*.spec.js && nyc report --reporter=html",
     "lint": "eslint index.js lib/ test/",
     "autolint": "nodemon -x eslint index.js lib/ test/",
-    "preversion": "npm test"
+    "preversion": "npm test && npm outdated"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/nicocube/wool-validate#readme",
   "devDependencies": {
-    "eslint": "^5.11.1",
+    "eslint": "^5.12.0",
     "nodemon": "^1.18.9",
     "nyc": "^13.1.0",
     "tap-summary": "^4.0.0",
