--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "pretest": "npm run lint",
     "test": "tape test/**/*.spec.js |tap-summary --no-progress",
-    "autotest": "nodemon -e js,yml -x 'tape test/**/*.spec.js |tap-summary --no-progress'",
-    "autolinttest": "nodemon -e js,yml -x 'npm run lint && tape test/**/*.spec.js |tap-summary --no-progress'",
-    "coverage": "nyc tape test/**/*.spec.js && nyc report --reporter=html",
+    "autotest": "nodemon -e js,yml -x 'npm test'",
     "lint": "eslint index.js lib/ test/",
-    "autolint": "nodemon -x eslint index.js lib/ test/",
-    "preversion": "npm test && npm outdated"
+    "autolint": "nodemon -x 'npm run lint'",
+    "coverage": "nyc tape test/**/*.spec.js && nyc report --reporter=html",
+    "preversion": "npm test && npm outdated && npm audit"
   },
   "repository": {
     "type": "git",
