--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "pretest": "npm run lint",
-    "test": "tape test/**/*.spec.js |tap-summary --no-progress",
+    "test": "tape test/**/*.spec.js |tap-spec-emoji --no-progress",
     "autotest": "nodemon -e js,yml -x 'npm test'",
     "lint": "eslint index.js lib/ test/",
     "autolint": "nodemon -x 'npm run lint'",
@@ -29,7 +29,7 @@
     "eslint": "^7.15.0",
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
-    "tap-summary": "^4.0.0",
+    "tap-spec-emoji": "^6.1.2",
     "tape": "^5.0.1",
     "tape-async": "^2.3.0",
     "wool-store": "^1.2.13"
