--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "2.4.4",
   "description": "Lib to validate data in Wool",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "pretest": "npm run lint",
     "test": "tape test/**/*.spec.js |tap-summary",
     "test:watch": "nodemon -x 'clear; npm test'",
-    "lint": "eslint index.js lib/ test/",
+    "lint": "standard --fix *.js lib/ test/",
     "lint:watch": "nodemon -x 'npm run lint'",
     "coverage": "c8 tape test/**/*.spec.js && c8 report --reporter=html",
-    "preversion": "npm test && npm audit --only=prod #&& npm outdated"
+    "preversion": "npm test && npm outdated && npm audit"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,10 @@
   "homepage": "https://github.com/nicocube/wool-validate#readme",
   "devDependencies": {
     "@freecube/tap-summary": "^4.0.4",
-    "c8": "^9.1.0",
-    "eslint": "^8.57.0",
-    "nodemon": "^3.1.0",
-    "tape": "^5.7.5",
-    "wool-store": "^2.3.0"
+    "c8": "^10.1.2",
+    "nodemon": "^3.1.4",
+    "standard": "^17.1.0",
+    "tape": "^5.8.1",
+    "wool-store": "^2.4.0"
   }
 }
